--- a/lab3/style.css
+++ b/lab3/style.css
@@ -2,3 +2,21 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
 }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #202020;
+  color: white;
+  padding: 10px 20px;
+}
+
+.search-bar {
+  display: flex;
+  align-items: center;
+}
+
+.search-bar input {
+  padding: 5px;
+  width: 250px;
+}
