--- a/lab3/style.css
+++ b/lab3/style.css
@@ -23,3 +23,18 @@ body {
 .main {
   display: flex;
 }
+.sidebar {
+  width: 200px;
+  background-color: #f1f1f1;
+  height: calc(100vh - 50px);
+  padding: 15px;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar li {
+  margin: 10px 0;
+}
